# 7apps-in-7minutes

./: .gcloudignore  .gitignore  LICENSE  README.md  cloudbuild.appengine.yaml  cloudbuild.appengineflex.yaml  cloudbuild.cloudfunction.yaml  cloudbuild.cloudrun.yaml  cloudbuild.cloudrunk8s.yaml  cloudbuild.compute.yaml  cloudbuild.container.yaml  cloudbuild.k8s.yaml  cloudbuild.setup.yaml  cloudbuild.yaml
app/: Dockerfile  app.flex.yaml  app.k8s.tmpl  app.k8s.yaml  app.standard.yaml  cloudbuild.yaml  entrypoint.sh  k8s.yaml  main.py  pyproject.toml  requirements.txt
app/scripts/: app.conf  certbot.conf  run.sh  run_certbot.sh  supervisord.conf  util.sh
app/src/: app.yaml  main.py  theme-options.json  theme.json
app/src/templates/: index.html
app/static/: index.css
app/templates/: app.k8s.tmpl  app.standard.tmpl  greeting.html  index.html
dashboard/: Dockerfile  app.tmpl  app.yaml  cloudbuild.yaml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  rollup.config.js
dashboard/assets/: favicon.ico:Zone.Identifier  index.html
dashboard/src/: .env  7apps.yaml  apps.yaml  main.py
dashboard/src/common/: config.py  constants.py  logging.py  models.py  utils.py
dashboard/src/config/: __init__.py  logging.py
dashboard/src/models/: __init__.py  app.py  build.py  cloud_build.py
dashboard/src/services/: __init__.py  app.py  appengine.py  build.py  notifier.py  tasks.py
dashboard/src/static/: index.css  timeline.js  utils.js
dashboard/src/static/css/: error.css  index.css
dashboard/src/static/js/: 7apps-bundle.js  bundle.js  index.js  main.js  timeline.js  utils.js
dashboard/src/static/js/services/: app.js  comment.js  log.js  notification.js
dashboard/src/templates/: index.html  props.js
dashboard/src/templates/content/: build.html  iframes.html  logs.html  overview.html  timeline.html
dashboard/src/utils/: __init__.py
dashboard/static/: index.css
dashboard/templates/: index.html
setup/: 1_compute_engine.tf  2_app_engine_flexible.tf  2_kubernetes_engine.tf  3_app_engine standard.tf  4_app_engine_flexible.tf  4_cloud_functions.tf  5_cloud_functions.tf  6_cloud_run.tf  _main.tf  (+19 more)
(+137 files in other folders)
