[tool.poetry]
name = "7apps-app"
version = "0.1.0"
description = "7Apps demo application"
authors = ["Chris Tippett <c.tippett@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
flask-cors = "^3.0.8"
pyfiglet = "^0.8.post1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
